[gd_scene load_steps=4 format=3 uid="uid://d7o6gx3eoiwq"]

[ext_resource type="Script" path="res://source/ui/menus/settings/settings.gd" id="1_afq6m"]
[ext_resource type="Shader" path="res://source/ui/blur.gdshader" id="2_n631o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkeq5"]
resource_local_to_scene = true
shader = ExtResource("2_n631o")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_afq6m")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
material = SubResource("ShaderMaterial_xkeq5")
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsTabs" type="TabContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
use_hidden_tabs_for_min_size = true

[node name="GamePlay" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 6
columns = 2

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="EffectsVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay/MarginContainer/GridContainer"]
layout_mode = 2
text = "Effects Volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/GamePlay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="Display" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 6
columns = 2

[node name="Fullscreen Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullScreenButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[node name="VSyncLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
text = "VSync"

[node name="VSyncButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Limited"
popup/item_2/id = 2

[node name="LimitFPSLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
text = "Limit FPS"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LimitFPSCheckbox" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer/CenterContainer"]
layout_mode = 2

[node name="FixedScaleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
text = "Fixed Scale
"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FixedScaleCheckbox" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScaleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Scale 1x"

[node name="ScaleSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsTabs/Display/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
min_value = 1.0
max_value = 4.0
step = 0.5
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ApplyButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="Settings" type="Node2D" parent="."]
